--- a/nico_webapp/static/main.css
+++ b/nico_webapp/static/main.css
@@ -10,17 +10,38 @@
     justify-content: center;
 }
 
+.social-media {
+    height: 40px;
+    width: 40px;
+}
+
 .content-div {
     height: 260px;
     width: 25%;
     padding: 10px;
+    text-align: center
 }
 
-.centered-text {
+.centered {
     text-align: center;
 }
 
+.align-right {
+    right: 0;
+}
+
 .content {
-    background: #DDDDDD;
+    background: #ffdf94;
+}
+
+main {
+    background: #ffecbf;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.image-description {
+    margin: 0 40px 0 40px;
 }
 
