--- a/nico_webapp/templates/contact.html
+++ b/nico_webapp/templates/contact.html
@@ -1,4 +1,25 @@
 {% extends 'layout.html' %}
 {% block content %}
-    <h3>Contact Page</h3>
+<form method="POST" action="" enctype="multipart/form-data">
+    {{ form.hidden_tag() }}
+    <fieldset class="form-group">
+        <legend class="border-bottom mb-4">Login</legend>
+        <div class="form-group">
+            {{ form.text.label(class="form-control-label") }}
+            {% if form.text.errors %}
+            {{ form.text(class="form-control form-control-lg is-invalid") }}
+            <div class="invalid-feedback">
+                {% for error in form.text.errors %}
+                <span> {{ error }} </span>
+                {% endfor %}
+            </div>
+            {% else %}
+            {{ form.text(class="form-control form-control-lg") }}
+            {% endif %}
+        </div>
+    </fieldset>
+    <div class="form-group">
+        {{ form.submit(class="btn btn-outline-info") }}
+    </div>
+</form>
 {% endblock content %}
