preview image is now optional added next/previews image logic in view page major layout improvements improved gallery view
Signed-off-by: unknown <dxtrlbrtry@yahoo.com>

--- a/nico_webapp/templates/content.html
+++ b/nico_webapp/templates/content.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
 {% block content %}
-<div class="row">
+<div class="centered">
 {% for image in images %}
-    <div class="content-div">
-        <a href="{{ url_for('main.view', image_id=image.id) }}">
-            <img class="article-img" src="{{ url_for('static', filename='pictures/' + image.preview_image) }}">
+    <div class="image-container">
+        <a href="{{ url_for('main.view', title=image.title) }}">
+            <img class="preview-image" src="{{ url_for('static', filename='pictures/' + image.preview_image) }}">
         </a>
         <h6 class="centered mb-0 mt-2">{{ image.title }}</h6>
     </div>
