--- a/nico_webapp/static/main.css
+++ b/nico_webapp/static/main.css
@@ -2,12 +2,32 @@
     justify-content: center;
 }
 
-.article-img {
-    max-height: 200px;
-    max-width: 200px;
-    min-height: 200px;
-    min-width: 200px;
-    justify-content: center;
+header {
+    height: 100px;
+    width: 100%;
+    text-align: center;
+    background: #DDDDDD;
+    position: absolute;
+}
+
+main {
+    padding-top: 100px;
+    margin-bottom: -50px;
+    min-height: 100%;
+    width: 100%;
+    background: #ffecbf;
+}
+
+footer {
+    height: 50px;
+    width: 100%;
+    padding: 5px;
+    text-align: center;
+    background: #DDDDDD;
+}
+
+.push {
+    height: 50px;
 }
 
 .social-media {
@@ -15,33 +35,51 @@
     width: 40px;
 }
 
-.content-div {
+.image-container {
     height: 260px;
-    width: 25%;
-    padding: 10px;
-    text-align: center
+    width: auto;
+    padding: 0 2% 0 2%;
+    margin: 0 1% 0 1%;
+    text-align: center;
+    display: inline-block;
+}
+
+.preview-image {
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+}
+
+.view-image {
+    width: 100%;
+    height: 600px;
+    object-fit: contain;
+}
+
+.gallery {
+    width: 100%;
+    overflow-x: auto;
+    white-space: nowrap;
 }
 
 .centered {
     text-align: center;
 }
 
-.align-right {
-    right: 0;
-}
-
 .content {
+    padding: 20px;
     background: #ffdf94;
-}
-
-main {
-    background: #ffecbf;
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    margin-left: 12%;
+    margin-right: 12%;
 }
 
 .image-description {
     margin: 0 40px 0 40px;
+}
+
+html, body {
+    height: 100%;
+    background: #ffecbf;
+    margin: 0;
 }
 
