--- a/nico_webapp/templates/layout.html
+++ b/nico_webapp/templates/layout.html
@@ -6,11 +6,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" href="{{ url_for('static', filename='icons/site-logo.png') }}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-    <script src="{{ url_for('static', filename='jquery-3.4.1.js') }}"></script>
     {% if title %}
     <title> Nico Web - {{ title }} </title>
     {% else %}
@@ -19,10 +18,16 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="centered">Nico Website</h1>
+        <div class="centered">
+            <a href="{{ url_for('main.home') }}">
+                <img class="mt-3" src="{{ url_for('static', filename='icons/site-logo.png') }}" style="width: 180px; height: 180px;"/>
+            </a>
+            <h1 class="site-title">Graphic Designer & Visual Artist</h1>
+        </div>
         <div class="row nav-bar">
-            <a class="nav-link" href="{{ url_for('main.home') }}">Content</a>
+            <a class="nav-link" href="{{ url_for('main.home') }}">Gallery</a>
             <a class="nav-link" href="{{ url_for('main.contact') }}">Contact</a>
+            <a class="nav-link" href="https://society6.com/nicoseb" target="_blank">Store</a>
             <a class="nav-link" href="{{ url_for('main.about') }}">About</a>
         </div>
     </header>
