--- a/nico_webapp/static/main.css
+++ b/nico_webapp/static/main.css
@@ -2,30 +2,41 @@
     font-family: "Mermaid";
     src: url(/static/fonts/Mermaid1001.ttf) format("truetype");
 
-    font-family: "Roboto-Regular";
-    src: url(/static/fonts/Roboto-Regular.ttf) format("truetype");
+    font-family: "Roboto-Light";
+    src: url(/static/fonts/Roboto-Light.ttf) format("truetype");
 }
 
 .site-title {
     font-family: "Mermaid";
-    font-size: 35pt;
     margin: 0;
     color: #ee6a40;
+    font-size: 35pt;
 }
 
-header {
-    height: 305px;
+@media only screen and (max-width: 420px) {
+  .site-title {
+    font-size: 30pt;
+  }
+}
+
+#site-logo {
+    width: 170px;
+    height: 170px;
+}
+
+.header {
     width: 100%;
     text-align: center;
-    position: absolute;
+    display: block;
+    background: #f4eddc;
+    padding-top: 2%;
 }
 
 main {
-    padding-top: 305px;
     margin-bottom: -50px;
     min-height: 100%;
     width: 100%;
-    background: #f4eddc;
+    display: block;
 }
 
 footer {
@@ -42,17 +53,22 @@ footer {
 html, body {
     height: 100%;
     width: 100%;
-    background: #ffecbf;
+    background: #f4eddc;
     margin: 0;
-    color: #b8321c;
-    font-family: Roboto-Regular;
+    font-family: Roboto-Light;
 }
 
 body {
     overflow-y: scroll;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
 .nav-bar {
+    margin-right: 0px;
+    margin-left: 0px;
     padding-top: 5px;
     justify-content: center;
     width: 100%;
@@ -60,28 +76,53 @@ body {
 
 .nav-link {
     user-select: none;
-    color: #b8321c;
+    color: #b8321c !important;
     margin: 0 20px 0 20px;
     font-size: 15pt;
+}
+
+@media only screen and (max-width: 420px) {
+  .nav-link {
+    margin: 0 15px 0 15px;
+    padding: 0;
+    font-size: 13pt;
+  }
 }
 
 .nav-link:hover {
     font-weight: 700;
     cursor: pointer;
+    color: #b8321c;
 }
 
 .content {
-    padding: 0px 20px 20px 20px;
+    padding: 25px 0px 20px 0px;
     background: #f4eddc;
     margin-left: 12%;
     margin-right: 12%;
+    margin-top: 10px;
     border-top: solid 1px;
     border-color: #f5b9a6;
 }
 
+@media only screen and (min-width: 420px) and (max-width: 900px) {
+    .content {
+        margin-left: 4%;
+        margin-right: 4%;
+    }
+}
+
+@media only screen and (max-width: 420px) {
+  .content {
+    margin: 10px 0 0 0;
+    padding: 10px 0 0 0;
+  }
+}
+
 .image-container {
     position: relative;
-    width: 100%
+    width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
@@ -98,6 +139,12 @@ body {
   -webkit-transition: all 0.4s ease-in-out 0s;
   -moz-transition: all 0.4s ease-in-out 0s;
   transition: all 0.4s ease-in-out 0s;
+}
+
+@media only screen and (min-width: 420px) {
+  .image-container .content-overlay {
+    border-radius: 15px;
+  }
 }
 
 .image-container:hover .content-overlay{
@@ -137,6 +184,7 @@ body {
   letter-spacing: 0.15em;
   margin-bottom: 0.5em;
   text-transform: uppercase;
+  font-size: 2vw;
 }
 
 .content-details p{
@@ -153,9 +201,19 @@ body {
 }
 
 .preview-image {
-    height: 230px;
-    width: 230px;
+    height: 100%;
+    width: 100%;
     object-fit: cover;
+    border-radius: 15px;
+}
+
+@media only screen and (max-width: 420px) {
+  .preview-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 0px;
+  }
 }
 
 .preview-image:hover {
@@ -164,14 +222,38 @@ body {
 }
 
 .image-selected {
-    border: solid 2px blue;
+    border: solid 2px;
+    border-color: #db7125;
     opacity: 1;
 }
 
+@media only screen and (max-width: 420px) {
+  .image-selected {
+    display: none;
+  }
+}
+
 #view-image {
-    width: 100%;
-    height: 450px;
+    max-width: 100%;
+    height: auto;
     object-fit: contain;
+}
+
+@media only screen and (min-width: 420px) {
+    #view-image {
+        border-radius: 10px;
+    }
+}
+
+
+#view-image-container {
+    position: relative;
+    display: inline-block;
+    object-fit: contain;
+}
+
+#image-title {
+    margin-bottom: 20px;
 }
 
 #image-description {
@@ -179,17 +261,90 @@ body {
     padding: 20px;
 }
 
-.layout-div {
-    margin: 2% 2% 2% 2%;
-    display: inline-block;
+@media only screen and (min-width: 420px) {
+  .layout-div {
+    transition: all .2s ease-in-out;
+  }
+
+  .layout-div:hover {
+    transform: scale(1.04);
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .layout-div {
+
+  }
 }
 
 .social-media {
+    padding: 3px;
     height: 40px;
     width: 40px;
+    object-fit: contain;
+    text-align: center;
 }
 
-#expanded_container {
-    margin-top: 10px;
+.contact-icons {
+    //margin-right: 12%;
+    margin: 10px 0px;
+    display: block;
 }
 
+@media only screen and (max-width: 420px) {
+  .contact-icons {
+    //margin-right: 2%;
+  }
+}
+
+.active-tab {
+    font-weight: 800;
+}
+
+table, th, td {
+    border: 1px solid black;
+    padding: 5px;
+}
+
+.copyright-text {
+    font-weight: 800;
+    font-size: 13pt;
+    text-align: center;
+}
+
+p, a, h3 {
+    color: #b8321c;
+}
+
+@media only screen and (min-width: 420px) and (max-width: 900px) {
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: calc((92vw - (11 * 1.5vw)) / 12);
+    grid-gap: 1.5vw;
+  }
+}
+
+@media  only screen and (min-width: 900px) {
+
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-auto-rows: calc((76vw - (11 * 1.5vw)) / 12);
+        grid-gap: 1.5vw;
+    }
+}
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
