--- a/nico_webapp/templates/upload.html
+++ b/nico_webapp/templates/upload.html
@@ -18,23 +18,19 @@
             {% endif %}
         </div>
         <div class="form-group">
-            {{ form.description.label(class="form-control-label") }}
-            {% if form.description.errors %}
-            {{ form.description(class="form-control form-control-lg is-invalid") }}
-            <div class="invalid-feedback">
-                {% for error in form.description.errors %}
-                <span> {{ error }} </span>
-                {% endfor %}
-            </div>
-            {% else %}
-            {{ form.description(class="form-control form-control-lg") }}
-            {% endif %}
-        </div>
-        <div class="form-group">
             {{ form.image.label() }}
             {{ form.image(class="form-control-file") }}
             {% if form.image %}
             {% for error in form.image.errors %}
+            <span class="text-danger"> {{ error }} </span>
+            {% endfor %}
+            {% endif %}
+        </div>
+        <div class="form-group">
+            {{ form.preview_image.label() }}
+            {{ form.preview_image(class="form-control-file") }}
+            {% if form.preview_image %}
+            {% for error in form.preview_image.errors %}
             <span class="text-danger"> {{ error }} </span>
             {% endfor %}
             {% endif %}
